<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    android:fillViewport="true"
    tools:context="com.dnsoftindia.fontsdemo.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:paddingBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:fontFamily="@font/asar_regular"
            android:text="@string/asar_regular"
            android:textAlignment="center"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/quicksand_bold"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/quicksand_regular"
            android:text="@string/quicksand_regular"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/pacifico_regular"
            android:text="@string/pacifico_regular"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/indie_flower"
            android:text="@string/indie_flower"
            android:textAlignment="center"
            android:textSize="24sp" />

    </LinearLayout>

</ScrollView>

